memperbaiki ket dan alert

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     <div class="ket">
     <h2>luas persegi panjang</h2>
     <p>ini merupakan operasi hitung luas persegi panjang</p>
-    <p>jika jawaban undefined,penjelasanya ada di icon (i) di pojok kiri atas </p>
     </div>
     <div class="dalem">
      <label class="bel1">
@@ -115,6 +114,7 @@
         <div class="ket">
         <h2>trigonometri</h2>
         <p>ini merupakan operasi hitung trigonometri</p>
+        <p>jika jawaban = undefined, penjelasannya ada di icon i di pojok kiri </p>
         </div>
       <div class="dalem">
       <label class="bel1">
