type number for matriks 2×2

--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
     </div>
     <form action="" class="dalem" autocomplete="off">
      <label class="bel1">
-      <input type="text" name="panjang" id="baris11" placeholder="baris 1, kolom 1">
+      <input type="number" name="panjang" id="baris11" placeholder="baris 1, kolom 1">
      </label>
     <label class="bel2">
-      <input type="text" name="lebar" id="baris22" placeholder="baris 1 kolom 2">
+      <input type="number" name="lebar" id="baris22" placeholder="baris 1 kolom 2">
     </label>
     <label class="bel3">
-      <input type="text" name="lebar" id="baris33" placeholder="baris 2 kolom 1">
+      <input type="number" name="lebar" id="baris33" placeholder="baris 2 kolom 1">
     </label>
     <label class="bel4">
-      <input type="text" name="lebar" id="baris44" placeholder=" baris 2 kolom 2">
+      <input type="number" name="lebar" id="baris44" placeholder=" baris 2 kolom 2">
     </label>
     </form>
     <div class="emet">
